prevent item label text from wrapping

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -132,6 +132,8 @@ table.fixed
   .control-label
     text-align: left
     font-weight: 200
+    max-width: 100px
+    white-space: nowrap
 
 #drop_chart
   padding: 20px
